auth gg client
